[tool.poetry]
name = "rapiduino"
version = "1.0.0"
description = "Rapidly develop code to control an Arduino using Python"
authors = ["Sam Wedge <sam.wedge@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.5"
dataclasses = {version = "^0.8", python = "~3.6"}
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
