[tool.poetry]
name = "rapiduino"
version = "1.0.0"
description = "Rapidly develop code to control an Arduino using Python"
authors = ["Sam Wedge <sam.wedge@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
pyserial = "^3.5"
dataclasses = {version = "^0.8", python = "~3.6"}
isort = {version = "^5.7.0", extras = ["colors"]}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^6.2.1"
coveralls = "^3.0.0"
flake8-bugbear = "^20.11.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
